# tflite

./: CMakeLists.txt
src/: main.cpp  ml_model.cpp  ml_model.h  tflite_model.h
